--- a/templates/company.html
+++ b/templates/company.html
@@ -10,7 +10,7 @@
         <img src="{{ logo_img }}" width="130" height="80" alt="">
       </div>
       <h1 class="h1 text-center mx-auto mt-0 pt-1" style="font-size: 70px;"><strong>{{ title }}</strong></h1>
-      <p class="text-center pt-1">Компания, {{ vacancies.count }} вакансий</p>
+      <p class="text-center pt-1">Компания, {{ city }}, {{ vacancies.count }} вакансий</p>
       <div class="row mt-5">
         <div class="col-12 col-lg-8 offset-lg-2 m-auto">
           {% for vacancy in vacancies %}
